--- a/ListView/ListViewExercicios/ListViewExercicios.csproj
+++ b/ListView/ListViewExercicios/ListViewExercicios.csproj
@@ -22,5 +22,8 @@
     <EmbeddedResource Update="Exercicio02.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Exercicio03.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
