--- a/ListView/ListViewExercicios/ListViewExercicios.csproj
+++ b/ListView/ListViewExercicios/ListViewExercicios.csproj
@@ -26,4 +26,8 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
 </Project>
